change logo and working app
