# .well-known/openapi.yaml
@@ -15,7 +15,7 @@ paths:
               schema: {}
           description: Successful Response
       summary: Plugin Manifest
-  /generate_diagram/{diagram_type}/{text}:
+  /generate_diagram/{diagram_type}:
     post:
       operationId: generate_diagram_endpoint
       parameters:
@@ -25,7 +25,7 @@ paths:
           schema:
             title: Diagram Type
             type: string
-        - in: path
+        - in: query
           name: text
           required: true
           schema:
